# sysrepo-plugin-dt-status

./: CMakeLists.txt  README.md
src/: status.c  status.h
yang/: status@2015-12-01.yang
